# pybikes

./: .gitignore  .travis.yml  Makefile  README  README.md  README.txt  STYLE  barclays.py  bicing.py  bicloo.py  bixi.py  cachemodel.py  citycycle.py  cyclocity.py  distribute_setup.py  ecobici.py  ecovelo.json  fantup.sh  fast.py  fastup.sh  goteborg.py  jcdecauxstation.py  keys.example.py  lol_startup.sh  main_startup.sh  midtub.sh  pyproject.toml  requirements.txt  retry_startup.sh  runtests.sh  setup.py  shitup.sh  startup.sh  station.py  test.py  threader.py  tusbic.py  velcom.py  vhello.py
data/: bcycle.json  bixi.json
extractors/: README  bcycle.py  cyclocity.py  cyclocity_navigator.py  domoblue.py  filler.py  nextbike.py  requirements.txt
lib/: ambiciat.py  barclays.py  bcycle.py  bicikelj.py  bicileon.py  bicincittanew.py  bicincittaold.py  bicing.py  bicloo.py  bikemi.py  bikla.py  bixi.py  bizi.py  boulder.py  bysykkel.py  bysykler.py  capitalbikeshare.py  cergy.py  chicago.py  citibikenyc.py  citycycle.py  cristolib.py  cyclic.py  cyclocity.py  decobike.py  denver.py  desmoines.py  domoblue.py  dublin.py  ecobici.py  girocleta.py  girocleta.py~  goodbike.py  goteborg.py  hangzhou.py  hawaii.py  jcdecauxstation.py  levelo.py  mejorenbici.py  melbourne.py  (+29 more)
pybikes/: VelobikeMSK.py  __init__.py  adbc.py  adcb.py  aksu.py  ambici.py  baksi.py  base.py  batumvelo.py  bcycle.py  beryl.py  bicicard.py  bicicas.py  bicicorunha.py  bicielx.py  biciferrolterra.py  bicimad.py  bicincitta.py  bicincitta_old.py  bicing.py  bicipalma.py  bikeshare_ie.py  bikeu.py  bilbonbizi.py  bixi.py  bizkaibizi.py  bonopark.py  bysykkel.py  bysykkel_graphql.py  bysykkelgraphql.py  callabike.py  careem.py  chartered_bike.py  ciclosampa.py  cleanap.py  clujbike.py  cocacola.py  compartibike.py  compat.py  contrib.py  (+88 more)
sys/: fantup.sh  midtub.sh  shitup.sh  threader.py
tests/: conftest.py  integration_bicicorunha.py  test_base.py  test_changes.py  test_compat.py  test_contrib.py  test_data.py  test_instances.py  test_utils.py  unittest_bicicorunha.py  unittest_pybikes.py
utils/: README.md  filler.py  github-summary.tpl.md  map.tpl.html  report.py  report.tpl.md  requirements.txt  summary.tpl.md  sync_nextbike.py
(+139 files in other folders)
